force-app/main/default/objects/Vendor_Compliance__c/Vendor_Compliance__c.object-meta.xml
<CustomObject>
    <description>Used by Dan Dietzman to track compliance information for Key Accounts.</description>
    <label>Vendor Compliance</label>
    <nameField>
        <label>Customer Vendor Compliance Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Compliance</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>