force-app/main/default/objects/Vendor_Compliance__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that this account and vendor compliance record are active.</description>
    <inlineHelpText>Indicates that this account and vendor compliance record are active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>