force-app/main/default/objects/Vendor_Compliance__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Irish Setter Brands (Work &amp; Hunt)</fullName>
            </value>
            <value>
                <fullName>Irish Setter Hunt</fullName>
            </value>
            <value>
                <fullName>Irish Setter Work</fullName>
            </value>
            <value>
                <fullName>Red Wing</fullName>
            </value>
            <value>
                <fullName>RW - Heritage</fullName>
            </value>
            <value>
                <fullName>Vasque</fullName>
            </value>
            <value>
                <fullName>Worx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>