force-app/main/default/objects/Vendor_Compliance__c/fields/Defective_Allowance_Processing__c.field-meta.xml
<CustomField>
    <fullName>Defective_Allowance_Processing__c</fullName>
    <description>Used to indicate the type of processing for handling defective allowance customers.</description>
    <inlineHelpText>Used to indicate the type of processing for handling defective allowance customers.</inlineHelpText>
    <label>Defective Allowance Processing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduct from Invoice</fullName>
            </value>
            <value>
                <fullName>Discount Included in Price</fullName>
            </value>
            <value>
                <fullName>They Invoice Us(We Issue Credit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>