force-app/main/default/objects/Vendor_Compliance__c/fields/Drop_Ship_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Drop_Ship_Service_Fee__c</fullName>
    <label>Drop Ship Service Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, $5 per pair (less than 6 pair)</fullName>
            </value>
            <value>
                <fullName>Yes, $3 per pair (less than 6 pair)</fullName>
            </value>
            <value>
                <fullName>No/Waived</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>