force-app/main/default/objects/Vendor_Compliance__c/fields/EDI_yes_no__c.field-meta.xml
<CustomField>
    <fullName>EDI_yes_no__c</fullName>
    <label>EDI (yes/no)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Setup in progress</fullName>
            </value>
            <value>
                <fullName>Yes Rack/ No DS</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>