force-app/main/default/objects/Vendor_Compliance__c/fields/Marketing_Funds_Processing__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Funds_Processing__c</fullName>
    <label>Marketing Funds Processing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduct From Invoice</fullName>
            </value>
            <value>
                <fullName>Discount Included in Price</fullName>
            </value>
            <value>
                <fullName>They Invoice Us (We Issue Credit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>