force-app/main/default/objects/Vendor_Compliance__c/fields/New_Price_Communication__c.field-meta.xml
<CustomField>
    <fullName>New_Price_Communication__c</fullName>
    <label>New Price Communication</label>
    <type>TextArea</type>
</CustomField>