force-app/main/default/objects/Vendor_Compliance__c/fields/New_Store_Discount__c.field-meta.xml
<CustomField>
    <fullName>New_Store_Discount__c</fullName>
    <label>New Store Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>10.5%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>