force-app/main/default/objects/Vendor_Compliance__c/fields/New_Store_Terms__c.field-meta.xml
<CustomField>
    <fullName>New_Store_Terms__c</fullName>
    <label>New Store Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>