force-app/main/default/objects/Vendor_Compliance__c/fields/Price_Increase_Notification_Period__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Notification_Period__c</fullName>
    <label>Price Increase Notification Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>May 1/Sept 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>