force-app/main/default/objects/Vendor_Compliance__c/fields/Price_List_or_Buying_Program__c.field-meta.xml
<CustomField>
    <fullName>Price_List_or_Buying_Program__c</fullName>
    <label>Price List or Buying Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adventure Discount Model</fullName>
            </value>
            <value>
                <fullName>Buying Program</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Current / Canada</fullName>
            </value>
            <value>
                <fullName>DTI - price list (SL)</fullName>
            </value>
            <value>
                <fullName>Hudson Discount Model</fullName>
            </value>
            <value>
                <fullName>Midstates Buying Group Program</fullName>
            </value>
            <value>
                <fullName>Mountain Discount Model</fullName>
            </value>
            <value>
                <fullName>Special Price List</fullName>
            </value>
            <value>
                <fullName>Wheatbelt Buying Group Program</fullName>
            </value>
            <value>
                <fullName>Whole Discount Model</fullName>
            </value>
            <value>
                <fullName>Worlldwide Buying Group Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>