force-app/main/default/objects/Vendor_Compliance__c/fields/Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee__c</fullName>
    <label>Service Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, $5 per order (less than 6 pair)</fullName>
            </value>
            <value>
                <fullName>No/Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>