force-app/main/default/objects/Vendor_Compliance__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1% 15 Net30</fullName>
            </value>
            <value>
                <fullName>1% 15 Net 30</fullName>
            </value>
            <value>
                <fullName>1% 15 Net 60</fullName>
            </value>
            <value>
                <fullName>1% 30 Net 75</fullName>
            </value>
            <value>
                <fullName>2% Net 45</fullName>
            </value>
            <value>
                <fullName>3% 25 Net 75</fullName>
            </value>
            <value>
                <fullName>3% Net 45</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 50</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>